Version 2.8.10 - 2014-08-03
* Bug fixes (see mercurial logs for details)

Version 2.8.9 - 2014-07-01
* Bug fixes (see mercurial logs for details)

Version 2.8.8 - 2014-04-07
* Bug fixes (see mercurial logs for details)

Version 2.8.7 - 2014-03-22
* Bug fixes (see mercurial logs for details)

Version 2.8.6 - 2014-03-22
* Bug fixes (see mercurial logs for details)

Version 2.8.5 - 2014-01-18
* Bug fixes (see mercurial logs for details)

Version 2.8.4 - 2013-12-04
* Bug fixes (see mercurial logs for details)

Version 2.8.3 - 2013-10-01
* Bug fixes (see mercurial logs for details)

Version 2.8.2 - 2013-07-22
* Bug fixes (see mercurial logs for details)

Version 2.8.1 - 2013-06-09
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Allow to search on target of Reference field
* Remove _inherits
* Add dynamic label
* Add prefix, suffix on tree view
* Replace _constraints with validate in ModelStorage
* Add selection_change_with on Selection and Reference fields
* Add Dict fields
* Remove unique constraint on model and field access
* Use lists of values in create
* (Field, Operator, Operand) are replaced by Domain on Rule
* Add global search
* Replace view shortcut by menu favorite
* Store default language in database
* Add icon attribute on fields
* Prevent Wizard State name to start with '_'
* Add completion attribute for Many2One, Many2Many and One2Many
* Add ViewSearch
* Add domains on Action Window

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Add pre-validation
* Allow to use XML file for views
* Add RPC definition
* Repace BrowseRecord by Model instance
* Replace Cache decorator by a simple LRU Cache
* Remove Cacheable
* Remove _description
* Rename _name by __name__
* Use class in Pool
* Fix search button clause in ModelButton.get_groups (CVE-2012-2238)
* Merge all kind of buttons
* Use XML id for board action instead of id
* Add states attribute to notebook